--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>An Analytical Portfolio by Vidya Kailasam</h1>
+								<h1>Hi, I'm Vidya Kailasam 👋</h1>
 							</header>
 							<div class="content">
-								<p>I am a Business Analytics graduate student
-								and<br/> this is a demonstration of my analytical coursework skills</p>
+								<p>I'm a Business Analytics graduate focusing on analytical frameworks and processes to derive actionable insights in the system.
+								 <br/> This portfolio is a demonstration of my coursework skills</p>
 								<ul class="actions">
 									<li><a href="https://github.com/vidyakailasam" class="button next scrolly">Projects</a></li>
 								</ul>
